   o #321109: view::destroy() needs to unset current_display or future init_displays won't work.
   o #325115: If the block description is not set, show the display title as well as the view name in block administration.
   o #327604 by henrrrik: should use multibyte string functions.
   o #328933 by cmyers: views_handler_filter_date fails to use exposed operator.
   o #332568 by Moonshine: Correct views performance timers.
   o #332679 by yched: render_link() does not check for empty data.
   o #333593: Incorrect reference to non-existent views_handler_join in help/api-tables.html.
   o #334337 by miro_dietiker: Documentation clarification for arguments, blocks and PHP Code plugins.
   o #336456 by dww: Date filter had trouble with NULL operators.
   o #336125 by nedjo: Missing filter for node translation.
   o #337360: Menu selection causes crash if menu module not active.
   o #339295 by katbailey: AJAX paging could fail with the same view in multiple tabs.
   o #339676 by nedjo: Source translation had wrong filter handler.
   o #340002 by hass: Allow the "Add display" button to wrap for translations whose phrase is longer.
   o #340033 by pancho: Clearer wording on some field help texts.
   o #340515: views_perm() was incorrectly views_ui_perm().
   o #330897: Invalid displays causing 'path' lookup to crash.

 Other changes:
   o Reorganize the analysis code into analyze.inc to make it easier for people to find the code and use it externally.
   o #298884 by neclimdul: Requested missing filter to filter for whether a user has a picture or not.
   o #336531 by dww: Set boolean filter to not use a checkbox which is lesser UI.
   o #338632 by drewish: Remove use of format_rss_channel and use proper templating instead.
   o #326034 by yched: Allow short names in admin summaries via new "title short" definition.
   o #335613 by swentel: Add hook_views_api() setting to bulk export.
   o #339707 by nedjo: Add filter to show child translations.