@@ -1,5 +1,5 @@
 <?php
-// $Id: views_plugin_row_comment_rss.inc,v 1.1 2008-09-03 19:21:29 merlinofchaos Exp $
+// $Id: views_plugin_row_comment_rss.inc,v 1.2 2008-12-02 22:17:42 merlinofchaos Exp $
 /**
  * @file
  * Contains the comment RSS row style plugin.
@@ -13,24 +13,30 @@ class views_plugin_row_comment_rss extends views_plugin_row {
   function render($row) {
     global $base_url;
 
-    if (empty($this->view->style_plugin->namespaces)) {
-      $this->view->style_plugin->namespaces['xmlns:dc'] = 'http://purl.org/dc/elements/1.1/';
-    }
-
     // Load the specified comment:
-    $item = _comment_load($row->cid);
-    $item->link = url('node/' . $item->nid, array('absolute' => TRUE, 'fragment' => 'comment-' . $item->cid));
+    $comment = _comment_load($row->cid);
 
-    $properties = array(
-      array('key' => 'pubDate', 'value' => gmdate('r', $item->timestamp)),
-      array('key' => 'dc:creator', 'value' => $item->name),
+    $item = new stdClass();
+    $item->title = $comment->subject;
+    $item->link = url('node/' . $comment->nid, array('absolute' => TRUE, 'fragment' => 'comment-' . $comment->cid));
+    $item->description = check_markup($comment->comment, $comment->format, FALSE);
+    $item->elements = array(
+      array('key' => 'pubDate', 'value' => gmdate('r', $comment->timestamp)),
+      array('key' => 'dc:creator', 'value' => $comment->name),
       array(
         'key' => 'guid',
         'value' => 'comment ' .  $item->cid . ' at ' . $base_url,
-        'attributes' => array('isPermaLink' => 'false')
+        'attributes' => array('isPermaLink' => 'false'),
+        'namespace' => array('xmlns:dc' => 'http://purl.org/dc/elements/1.1/'),
       ),
     );
-    $item_text = check_markup($item->comment, $item->format, FALSE);
-    return format_rss_item($item->subject, $item->link, $item_text, $properties);
+
+    foreach ($item->elements as $element) {
+      if (isset($element['namespace'])) {
+        $this->view->style_plugin->namespaces = array_merge($this->view->style_plugin->namespaces, $element['namespace']);
+      }
+    }
+
+    return theme($this->theme_functions(), $this->view, $this->options, $item);
   }
 }
