@@ -1,5 +1,5 @@
 <?php
-// $Id: views_plugin_row_node_rss.inc,v 1.2 2008-12-02 00:11:04 merlinofchaos Exp $
+// $Id: views_plugin_row_node_rss.inc,v 1.3 2008-12-02 22:17:42 merlinofchaos Exp $
 /**
  * @file
  * Contains the node RSS row style plugin.
@@ -42,44 +42,47 @@ class views_plugin_row_node_rss extends views_plugin_row {
     }
 
     // Load the specified node:
-    $item = node_load($row->nid);
-    $item->build_mode = NODE_BUILD_RSS;
-    $item->link = url("node/$row->nid", array('absolute' => TRUE));
+    $node = node_load($row->nid);
+    $node->build_mode = NODE_BUILD_RSS;
 
     if ($item_length != 'title') {
       $teaser = ($item_length == 'teaser') ? TRUE : FALSE;
 
       // Filter and prepare node teaser
-      if (node_hook($item, 'view')) {
-        $item = node_invoke($item, 'view', $teaser, FALSE);
+      if (node_hook($node, 'view')) {
+        $node = node_invoke($node, 'view', $teaser, FALSE);
       }
       else {
-        $item = node_prepare($item, $teaser);
+        $node = node_prepare($node, $teaser);
       }
 
       // Allow modules to change $node->teaser before viewing.
-      node_invoke_nodeapi($item, 'view', $teaser, FALSE);
+      node_invoke_nodeapi($node, 'view', $teaser, FALSE);
     }
 
+    $item = new stdClass();
+    $item->title = $node->title;
+    $item->link = url("node/$row->nid", array('absolute' => TRUE));
+
     // Allow modules to add additional item fields and/or modify $item
-    $extra = node_invoke_nodeapi($item, 'rss item');
-    $extra = array_merge($extra,
+    $extra = node_invoke_nodeapi($node, 'rss item');
+    $item->elements = array_merge($extra,
       array(
-        array('key' => 'pubDate', 'value' => gmdate('r', $item->created)),
+        array('key' => 'pubDate', 'value' => gmdate('r', $node->created)),
         array(
           'key' => 'dc:creator',
-          'value' => $item->name,
+          'value' => $node->name,
           'namespace' => array('xmlns:dc' => 'http://purl.org/dc/elements/1.1/'),
         ),
         array(
           'key' => 'guid',
-          'value' => $item->nid . ' at ' . $base_url,
+          'value' => $node->nid . ' at ' . $base_url,
           'attributes' => array('isPermaLink' => 'false')
         ),
       )
     );
 
-    foreach ($extra as $element) {
+    foreach ($item->elements as $element) {
       if (isset($element['namespace'])) {
         $this->view->style_plugin->namespaces = array_merge($this->view->style_plugin->namespaces, $element['namespace']);
       }
@@ -88,20 +91,20 @@ class views_plugin_row_node_rss extends views_plugin_row {
     // Prepare the item description
     switch ($item_length) {
       case 'fulltext':
-        $item_text = $item->body;
+        $item->description = $node->body;
         break;
       case 'teaser':
-        $item_text = $item->teaser;
+        $item->description = $node->teaser;
         if (!empty($item->readmore)) {
-          $item_text .= '<p>' . l(t('read more'), 'node/' . $item->nid, array('absolute' => TRUE, 'attributes' => array('target' => '_blank'))) . '</p>';
+          $item->description .= '<p>' . l(t('read more'), 'node/' . $item->nid, array('absolute' => TRUE, 'attributes' => array('target' => '_blank'))) . '</p>';
         }
         break;
       case 'title':
-        $item_text = '';
+        $item->description = '';
         break;
     }
 
-    return format_rss_item($item->title, $item->link, $item_text, $extra);
+    return theme($this->theme_functions(), $this->view, $this->options, $item);
   }
 }
 
